# app-eng-comp

.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  readme.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5a27b6b52f0f_create_users_table.py
backend/api/config/: settings.py
backend/api/history/: permissions.py
backend/api/post/: models.py  permissions.py
backend/api/post/migrations/: 0002_alter_post_file.py
backend/api/subject/: serializers.py
backend/api/subject_directory/: models.py  views.py
backend/api/subject_directory/migrations/: 0003_alter_directoryfile_file.py
backend/api/tests/: test_directory.py  test_directory_file.py  test_history.py  test_post.py  test_schedule.py  test_shared_directory_file.py  test_subject.py  test_user.py
backend/api/user/: models.py  serializers.py  views.py
backend/api/user/migrations/: 0004_alter_user_entry_period.py
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: user.py
backend/app/repositories/: user.py
backend/app/routers/: user_router.py
backend/app/schemas/: user.py
backend/app/services/: user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: CompFlow.tsx  main.tsx  routes.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/config/: api.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: DirectoryList.tsx  DirectoryView.tsx  LandingPage.tsx  Login.tsx  Register.tsx  StudentDashboard.tsx  (+1 more)
(+18 files in other folders)
